--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>WordPress Salt Generator</title>
+  </head>
+  <body>
+    <div class="salt"></div>
+    <script>
+      var salt = () => {
+        var arr = new Uint8Array(64 / 2);
+        window.crypto.getRandomValues(arr);
+        return Array.from(arr, dec => ('0' + dec.toString(16)).substr(-2)).join('');
+      };
+      var keys = ['AUTH_KEY', 'SECURE_AUTH_KEY', 'LOGGED_IN_KEY', 'NONCE_KEY', 'AUTH_SALT', 'SECURE_AUTH_SALT', 'LOGGED_IN_SALT', 'NONCE_SALT'];
+      keys.forEach(key => document.querySelector('.salt').innerHTML += `${key}=${salt()}\n`);
+    </script>
+  </body>
+</html>
